--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 pygments: true
+
+maruku:
+  use_tex: true
+  use_divs: true
+  png_engine: blahtex
+  png_dir: images/latex/
+  png_url: /images/latex/
